Fixed containers for landing page, removed old html files no longer needed, added heading text to the jump web pages

--- a/WebVisualizations/style.css
+++ b/WebVisualizations/style.css
@@ -1,25 +1,57 @@
+/* Default Webpage Background Color */
+html {background-color: lightgrey}
 
+/* Headers Font/Color/Background */
 h1 {
     color: white;
-    background-color: rgb(47, 145, 145) ;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: rgb(47, 145, 145)
   }
 
 h2 {
-  color: rgb(47, 145, 145);
-  font-family: Georgia, 'Times New Roman', Times, serif
+  color: rgb(47, 145, 130);
 }
 
-p {
-  font-family: Georgia, 'Times New Roman', Times, serif
+.box-container {
+  display: flex;
+  flex-wrap: nowrap;
+  background-color:lightgrey;
+}
+.box {
+  border-radius: 15px 50px 30px 5px;
+  background-color: white;
+  padding: 10px;
+  position: relative;
+  margin: 10px;
+  width: 100%;
+  
+
 }
 
+/* navbar styling*/
+a.navbar-brand{
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
+  font-size: 25px;
+}
 
 /*footer styling*/
-.page-footer{
-  background-color: rgb(92, 90, 90);
-  margin-top: 50px;
+.footer{
+  color: whitesmoke;
+  background-color: rgb(47, 145, 145);
+  font-variant: small-caps;
+  padding:0px 10px 0px 10px;
   position: fixed;
   bottom: 0;
+  height: 2%;
   width: 100%;
+}
+
+
+
+.alignleft {
+	float: left;
+}
+.alignright {
+	float: right;
 }
